--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 CLOUD_NAME = dna2gp1rt
 CLOUD_API_KEY = 362169466611167
 CLOUD_API_SECRET = 73qmGVlRoEcHjHKiXSeSVl3843Y
+
+ATLASDB_URL = mongodb+srv://trashgame717:nIFGokh5kfC4uinR@cluster0.nuxyjox.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+SECRET = mysupersecretcode
